[package]
name = "th_dnh_archiver"
version = "3.0.2"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
byteorder = "1.0"
encoding = "0.2"
failure = { version = "0.1.8", features = ["backtrace"] }
lazy_static = "1.0"
libflate = "1.2"
