[package]
name = "th_dnh_archiver"
version = "3.0.2"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
byteorder = "1.0"
encoding = "0.2"
lazy_static = "1.0"
libflate = "1.2"
